[gd_scene load_steps=6 format=2]

[ext_resource path="res://EasyStageScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Boom.wav" type="AudioStream" id=2]
[ext_resource path="res://World.gd" type="Script" id=3]
[ext_resource path="res://PuaseMenu.gd" type="Script" id=4]
[ext_resource path="res://Gunner1.tscn" type="PackedScene" id=5]

[node name="Game" type="Node2D" groups=["World"]]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_vertical_guides_": [ 80.0 ]
}
wave_size = 2

[node name="Gunner1" parent="." instance=ExtResource( 5 )]
position = Vector2( 232, 0 )

[node name="Boom" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="EasyStageScene" parent="." instance=ExtResource( 1 )]
pause_mode = 0

[node name="PauseMenu" type="PopupDialog" parent="."]
pause_mode = 2
margin_left = 200.0
margin_right = 240.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="PauseMenu"]
pause_mode = 2
margin_right = 51.0
margin_bottom = 20.0
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}
